Terraform Scripts/Jenkins_Server/main.tf
resource "aws_instance" "JenkinsServer" {
  ami                    = data.aws_ami.rhel_9.id
  instance_type          = var.my_instance_type
  key_name               = var.my_key
  vpc_security_group_ids = [aws_security_group.web-traffic.id]

  tags = {
    "Name" = "New_Jenkin-Server"
}
}




####### Amazon Linux 2 ############
resource "aws_instance" "JenkinsServer" {
  ami                    = data.aws_ami.amazonlinux2.id
  instance_type          = var.my_instance_type
  key_name               = var.my_key
  vpc_security_group_ids = [aws_security_group.web-traffic.id]

  tags = {
    "Name" = "Jenkins-Server"
  }
}
